update with maramo photo

--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
                 <p>test</p>
             </section>
             <section class="box margin-bottom-1 section-two">
-                <h2 class="section-header">Toloria, Madagascar</h2>
-                <p>test</p>
+                <h2 class="section-header">Bulacan City, Philippines</h2>
+                <div class="my-place-photo">
+                    <img src="images/maramo-river.webp" alt="Maramo River Philippines" width="350">
+                    <p>Maramo River</p>
+                </div>
             </section>
         </div>
-        <section class="box margin-bottom-1">
+        <section class="box margin-bottom-1 section-three">
             <h2 class="section-header">Web and Computer Programming Certificate</h2>
             <p>test</p>
         </section>
