--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <p>test</p>
             </section>
             <section class="box margin-bottom-1 section-two">
-                <h2 class="section-header">Bulacan City, Philippines</h2>
+                <h2 class="section-header">Bulacan, Philippines</h2>
                 <div class="my-place-photo">
                     <img src="images/maramo-river.webp" alt="Maramo River Philippines" width="350">
-                    <p>Maramo River</p>
                 </div>
+                <p>Maramo River</p>
             </section>
         </div>
         <section class="box margin-bottom-1 section-three">
