working certificate list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <section class="box margin-bottom-1 section-one">
                 <h2 class="section-header">Course Work</h2>
-                <p>test</p>
+                <ul id="courses-list"></ul>
             </section>
             <section class="box margin-bottom-1 section-two">
                 <h2 class="section-header">Bulacan, Philippines</h2>
@@ -53,7 +53,13 @@
         </div>
         <section class="box margin-bottom-1 section-three">
             <h2 class="section-header">Web and Computer Programming Certificate</h2>
-            <p>test</p>
+            <div class="button-certificate">
+                <button class="btn" id="btn-all">All</button>
+                <button class="btn" id="btn-cse">CSE</button>
+                <button class="btn" id="btn-wdd">WDD</button>
+            </div>
+            <hr>
+            <ul id="certificate-list"></ul>
         </section>
     </main>
 
