add hamburger menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Header -->
     <header class="header">
         <!-- Need to be responsive -->
+        <a id="menu" href="#"></a>
         <div class="hero">
             <img src="images/profile-photo.webp" alt="Joseph D. Peralta" height="100" class="shadow">
             <h1 class="kodchasan-bold">Joseph D. Peralta</h1>
