update total number of credits

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <button class="btn" id="btn-wdd">WDD</button>
             </div>
             <hr>
+            <p id="total-credit"></p>
             <ul id="certificate-list"></ul>
         </section>
     </main>
