update meta tags add og

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>A Course Home Page - Joseph Peralta</title>
     <meta name="author" content="Joseph D. Peralta">
     <meta name="description" content="A Course Home Page for WDD231 Web Frontend Development">
+    <meta property="og:title" content="A Course Home Page - Joseph Peralta" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/" />
+    <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/images/maramo-river-350w.webp" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
@@ -14,7 +18,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@400;600;700&display=swap" rel="stylesheet">
-
+    <!-- Favicon -->
+     <link rel="icon" href="favicon.ico">
     <!-- Javascript -->
     <script defer src="scripts/script.js"></script>
 </head>
