--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/" />
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/images/maramo-river-350w.webp" />
+    <meta property="description" content="A Course Home Page for WDD231 Web Frontend Development">
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
