update working responsive UI using no media queries

--- a/prophets.html
+++ b/prophets.html
@@ -10,15 +10,18 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/prophets.html">
     <meta property="description" content="Latter-day Propets">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/prophets.css">
     <script defer src="scripts/prophets.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Latter-day Prophets</h1>
     </header>
     <main>
-        <div id="cards"></div>
+        <div id="cards" class="grid"></div>
     </main>
     <footer>
         Joseph Peralta | Latter-day Prophets
