--- a/prophets.html
+++ b/prophets.html
@@ -20,6 +20,15 @@
     <header>
         <h1>Latter-day Prophets</h1>
     </header>
+    <nav>
+        <button id="all" class="active">No Filter</button>
+        <button id="idaho">Idaho Born</button>
+        <button id="nonus">Non-US Born</button>
+        <button id="ten">15+ Years</button>
+        <button id="childs">4- Children</button>
+        <button id="childl">10+ Children</button>
+        <button id="old">95+ Years</button>
+    </nav>
     <main>
         <div id="cards" class="grid"></div>
     </main>
