--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,6 +8,9 @@
     <meta name="description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
     <meta name="og:title" content="Directory of Bulacan Chamber of Commerce">
     <meta name="og:description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
+    <meta name="og:type" content="website">
+    <meta name="image" content="images/">
+    <meta name="url" content="https://josephperalta03011993.github.io/wdd231/chamber/directory.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -15,8 +18,12 @@
     <script defer src="scripts/script.js"></script>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Test</h1>
 </body>
 </html>
