--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     <meta name="og:title" content="Directory of Bulacan Chamber of Commerce">
     <meta name="og:description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
     <meta name="og:type" content="website">
-    <meta name="image" content="images/">
+    <meta name="image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta name="url" content="https://josephperalta03011993.github.io/wdd231/chamber/directory.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
