update name to property meta tag og

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,11 +6,11 @@
     <title>Directory</title>
     <meta name="author" content="Joseph D. Peralta">
     <meta name="description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
-    <meta name="og:title" content="Directory of Bulacan Chamber of Commerce">
-    <meta name="og:description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
-    <meta name="og:type" content="website">
-    <meta name="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
-    <meta name="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/directory.html">
+    <meta property="og:title" content="Directory of Bulacan Chamber of Commerce">
+    <meta property="og:description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
+    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/directory.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
