update title descriptive

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory</title>
+    <title>Directory of Bulacan Chamber of Commerce</title>
     <meta name="author" content="Joseph D. Peralta">
     <meta name="description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
     <meta property="og:title" content="Directory of Bulacan Chamber of Commerce">
