update working nav with company logo

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,6 +24,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Test</h1>
+    <header>
+        <img src="images/company-logo.webp" alt="Logo of Bulacan of Commerce" srcset="images/company-logo.webp" width="75" height="70">
+        <span>
+            <strong>Bulacan</strong><br>
+            Chamber of Commerce
+        </span>
+        <button id="hamburger">&#9776;</button>
+    </header>
+    <nav class="navigation">
+        <ul class="menu-links">
+            <li><a href="http://" title="home">Home</a></li>
+            <li class="current-menu-item"><a href="directory.html" title="directory">Directory</a></li>
+            <li><a href="http://" title="join">Join</a></li>
+            <li><a href="http://" title="discover">Discover</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Directory of Bulacan Chamber of Commerce</h1>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
