add toogle X in hamburger

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,9 +28,9 @@
         <img src="images/company-logo.webp" alt="Logo of Bulacan of Commerce" srcset="images/company-logo.webp" width="75" height="70">
         <span>
             <strong>Bulacan</strong><br>
-            Chamber of Commerce
+            <span id="company-desc">Chamber of Commerce</span>
         </span>
-        <button id="hamburger">&#9776;</button>
+        <button id="hamburger"></button>
     </header>
     <nav class="navigation">
         <ul class="menu-links">
