working mobile desktop navigation header

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,15 +31,16 @@
             <span id="company-desc">Chamber of Commerce</span>
         </span>
         <button id="hamburger"></button>
+        <!-- navigation -->
+        <nav class="navigation">
+            <ul class="menu-links">
+                <li><a href="http://" title="home">Home</a></li>
+                <li class="current-menu-item"><a href="directory.html" title="directory">Directory</a></li>
+                <li><a href="http://" title="join">Join</a></li>
+                <li><a href="http://" title="discover">Discover</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="navigation">
-        <ul class="menu-links">
-            <li><a href="http://" title="home">Home</a></li>
-            <li class="current-menu-item"><a href="directory.html" title="directory">Directory</a></li>
-            <li><a href="http://" title="join">Join</a></li>
-            <li><a href="http://" title="discover">Discover</a></li>
-        </ul>
-    </nav>
     <main>
         <h1>Directory of Bulacan Chamber of Commerce</h1>
     </main>
