test data for member json

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,9 +43,14 @@
     </header>
     <main>
         <h1>Directory of Bulacan Chamber of Commerce</h1>
+        <div class="filter">
+            <button type="button">Grid</button>
+            <button type="button">List</button>
+        </div>
+        <div id="cards" class="grid"></div>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
