--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,13 +44,13 @@
     <main>
         <h1>Directory of Bulacan Chamber of Commerce</h1>
         <div class="filter">
-            <button type="button">Grid</button>
-            <button type="button">List</button>
+            <button type="button" id="grid">Grid</button>
+            <button type="button" id="list">List</button>
         </div>
         <div id="cards" class="grid"></div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
