--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,10 +34,10 @@
         <!-- navigation -->
         <nav class="navigation">
             <ul class="menu-links">
-                <li><a href="http://" title="home">Home</a></li>
+                <li><a href="home.html" title="home">Home</a></li>
                 <li class="current-menu-item"><a href="directory.html" title="directory">Directory</a></li>
-                <li><a href="http://" title="join">Join</a></li>
-                <li><a href="http://" title="discover">Discover</a></li>
+                <li><a href="join.html" title="join">Join</a></li>
+                <li><a href="discover.html" title="discover">Discover</a></li>
             </ul>
         </nav>
     </header>
