--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,7 +30,7 @@
             <strong>Bulacan</strong><br>
             <span id="company-desc">Chamber of Commerce</span>
         </span>
-        <button id="hamburger"></button>
+        <button id="hamburger" aria-label="Menu button"></button>
         <!-- navigation -->
         <nav class="navigation">
             <ul class="menu-links">
@@ -44,8 +44,8 @@
     <main>
         <h1>Directory of Bulacan Chamber of Commerce</h1>
         <div class="filter">
-            <button type="button" id="grid">Grid</button>
-            <button type="button" id="list">List</button>
+            <button type="button" id="grid">&#9871; Grid</button>
+            <button type="button" id="list">&#9868; List</button>
         </div>
         <div id="cards" class="grid"></div>
     </main>
