update 320px width responsive for mobile

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <main>
-        <h1>Directory of Bulacan Chamber of Commerce</h1>
+        <h1 class="center">Directory of Bulacan Chamber of Commerce</h1>
         <div class="filter">
             <button type="button" id="grid">&#9871; Grid</button>
             <button type="button" id="list">&#9868; List</button>
