--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="chamber.html">Chamber</a></li>
+            <li><a href="chamber/directory.html">Chamber</a></li>
             <li><a href="https://github.com/josephperalta03011993" target="_blank">GitHub Profile</a></li>
             <li><a href="https://www.linkedin.com/in/jdperalta/" target="_blank">LinkedIn</a></li>
         </ul>
