footer content added dynamic dates

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,7 +50,40 @@
         <div id="cards" class="grid"></div>
     </main>
     <footer>
-
+        <span>
+            <strong>Bulacan Chamber of Commerce</strong>
+            <p>Hiyas ng Bulacan Convention Center
+                Provincial Capitol Compound, Guinhawa
+                City of Malolos, Bulacan
+            </p>
+            <p>info@bulacanchamber.com</p>
+            <p>(044) 791-2574, (044) 794-1754</p>
+        </span>
+        <span>
+            <ul class="socials">
+                <li>
+                    <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer">
+                    Y
+                    </a>
+                </li>
+                <li>
+                    <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer">
+                        T
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer">
+                    L
+                    </a>
+                </li>
+            </ul>
+        </span>
+        <span>
+            <p>WDD231 Class Project</p>
+            <p>Joseph D. Peralta</p>
+            <p>&copy; <span id="currentyear"></span> Bulacan Chamber of Commerce</p>
+            <p id="footer-lastmodified-paragraph">Last Update: <span id="lastModified"></span></p>
+        </span>
     </footer>
 </body>
 </html>
