update socials and footer

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -63,17 +63,17 @@
             <ul class="socials">
                 <li>
                     <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer">
-                    Y
+                        <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
                     </a>
                 </li>
                 <li>
                     <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer">
-                        T
+                        <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer">
-                    L
+                        <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
                     </a>
                 </li>
             </ul>
