update footer css

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -81,8 +81,8 @@
         <span>
             <p>WDD231 Class Project</p>
             <p>Joseph D. Peralta</p>
-            <p>&copy; <span id="currentyear"></span> Bulacan Chamber of Commerce</p>
-            <p id="footer-lastmodified-paragraph">Last Update: <span id="lastModified"></span></p>
+            <p>&copy;<span id="currentyear"></span> Bulacan Chamber of Commerce</p>
+            <p id="footer-lastmodified-paragraph">Last Modification: <span id="lastModified"></span></p>
         </span>
     </footer>
 </body>
