--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,7 +50,7 @@
         <div id="cards" class="grid"></div>
     </main>
     <footer>
-        <span>
+        <div class="contact-info">
             <strong>Bulacan Chamber of Commerce</strong>
             <p>Hiyas ng Bulacan Convention Center
                 Provincial Capitol Compound, Guinhawa
@@ -58,32 +58,32 @@
             </p>
             <p>info@bulacanchamber.com</p>
             <p>(044) 791-2574, (044) 794-1754</p>
-        </span>
-        <span>
+        </div>
+        <div class="social-media">
             <ul class="socials">
                 <li>
-                    <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer" aria-label="Youtube Icon">
                         <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
                     </a>
                 </li>
                 <li>
-                    <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer">
+                    <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer" aria-label="Twitter Icon">
                         <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Icon">
                         <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
                     </a>
                 </li>
             </ul>
-        </span>
-        <span>
+        </div>
+        <div class="project-info">
             <p>WDD231 Class Project</p>
             <p>Joseph D. Peralta</p>
             <p>&copy;<span id="currentyear"></span> Bulacan Chamber of Commerce</p>
             <p id="footer-lastmodified-paragraph">Last Modification: <span id="lastModified"></span></p>
-        </span>
+        </div>
     </footer>
 </body>
 </html>
