ready for testing

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -51,7 +51,7 @@
     </main>
     <footer>
         <div class="contact-info">
-            <strong>Bulacan Chamber of Commerce</strong>
+            <p><strong>Bulacan Chamber of Commerce</strong></p>
             <p>Hiyas ng Bulacan Convention Center
                 Provincial Capitol Compound, Guinhawa
                 City of Malolos, Bulacan
@@ -60,23 +60,15 @@
             <p>(044) 791-2574, (044) 794-1754</p>
         </div>
         <div class="social-media">
-            <ul class="socials">
-                <li>
-                    <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer" aria-label="Youtube Icon">
-                        <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer" aria-label="Twitter Icon">
-                        <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Icon">
-                        <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
-                    </a>
-                </li>
-            </ul>
+            <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer" aria-label="Youtube Icon">
+                <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
+            </a>
+            <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer" aria-label="Twitter Icon">
+                <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
+            </a>
+            <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Icon">
+                <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
+            </a>
         </div>
         <div class="project-info">
             <p>WDD231 Class Project</p>
