--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -61,13 +61,13 @@
         </div>
         <div class="social-media">
             <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer" aria-label="Youtube Icon">
-                <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
+                <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32" loading="lazy">
             </a>
             <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer" aria-label="Twitter Icon">
-                <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
+                <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32" loading="lazy">
             </a>
             <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Icon">
-                <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
+                <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32" loading="lazy">
             </a>
         </div>
         <div class="project-info">
