--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory of Bulacan Chamber of Commerce</title>
+    <title>Home Page of Bulacan Chamber of Commerce</title>
     <meta name="author" content="Joseph D. Peralta">
-    <meta name="description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
+    <meta name="description" content="This page provides information about community of local business, weather, calls to action, and business spotlights that belong to the chamber of commerce in Bulacan City Philippines.">
     <meta property="og:title" content="Directory of Bulacan Chamber of Commerce">
-    <meta property="og:description" content="This page provides a list of local business and other organizations that belong to the chamber of commerce in Bulacan City Philippines.">
+    <meta property="og:description" content="This page provides information about community of local business, weather, calls to action, and business spotlights that belong to the chamber of commerce in Bulacan City Philippines.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
-    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/index.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -21,7 +21,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,20 +34,23 @@
         <!-- navigation -->
         <nav class="navigation">
             <ul class="menu-links">
-                <li><a href="index.html" title="home">Home</a></li>
-                <li class="current-menu-item"><a href="directory.html" title="directory">Directory</a></li>
+                <li class="current-menu-item"><a href="index.html" title="home">Home</a></li>
+                <li><a href="directory.html" title="directory">Directory</a></li>
                 <li><a href="join.html" title="join">Join</a></li>
                 <li><a href="discover.html" title="discover">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1 class="center">Directory of Bulacan Chamber of Commerce</h1>
-        <div class="filter">
-            <button type="button" id="grid">&#9871; Grid</button>
-            <button type="button" id="list">&#9868; List</button>
-        </div>
-        <div id="cards" class="grid"></div>
+        <section class="hero">
+            <picture>
+                <source media="(min-width: 38rem)" srcset="images/hero-image.webp">
+                <img src="images/hero-image-320.webp" alt="Hero Image for Chamber Of Commerce Bulacan City" width="320" height="550">
+            </picture>
+            <div class="hero-content">
+                <strong><a href="join.html" class="cta-button">JOIN NOW</a></strong>
+            </div>
+        </section>    
     </main>
     <footer>
         <div class="contact-info">
