optimize js separate

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,14 +14,14 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <!-- JS -->
-    <script defer src="scripts/script.js"></script>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- JS -->
+    <script defer src="scripts/home-script.js"></script>
 </head>
 <body>
     <header>
