--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,8 +14,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <!-- JS -->
-    <script defer src="scripts/script.js"></script>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
     <!-- Google Fonts -->
@@ -23,6 +21,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--<link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@400;600;700&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- JS -->
+    <script defer src="scripts/directory-script.js"></script>
 </head>
 <body>
     <header>
