--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,6 +51,15 @@
                 <strong><a href="join.html" class="cta-button">JOIN NOW</a></strong>
             </div>
         </section>    
+        <section class="events">
+
+        </section>
+        <section class="weather">
+
+        </section>
+        <section class="spotlights" id="spotlights">
+            
+        </section>
     </main>
     <footer>
         <div class="contact-info">
