--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,6 +51,7 @@
                 <strong><a href="join.html" class="cta-button">JOIN NOW</a></strong>
             </div>
         </section>    
+        <h1>Home</h1>
         <section class="events">
 
         </section>
