good result from testing to css contrast and lighthouse performance

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="home-main-container">
         <section class="hero">
             <picture>
                 <source media="(min-width: 38rem)" srcset="images/hero-image.webp">
