update working 100perc optimize

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -114,6 +114,6 @@
             <p id="footer-lastmodified-paragraph">Last Modification: <span id="lastModified"></span></p>
         </div>
     </footer>
-    <script src="scripts/weather-api.js"></script>
+    <script src="scripts/weather-api.js" defer></script>
 </body>
 </html>
