update working forecast for 3 days

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,6 +79,9 @@
                 <!-- Weather Forecast -->
                 <section id="weather-forecast">
                     <h2>Weather Forecast</h2>
+                    <p id="today"></p>
+                    <p id="tomorrow"></p>
+                    <p id="day-three"></p>
                 </section>
             </div>
             <!-- Top Companies -->
