--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,6 +57,9 @@
                 <!-- Events -->
                 <section id="events">
                     <h2>Events</h2>
+                    <div id="weather-event-container">
+                        <p id="weather-events"></p>
+                    </div>
                 </section>
 
                 <!-- Current Weather -->
