fix html css err warnings

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <main id="home-main-container">
-        <section class="hero">
+        <div class="hero">
             <picture>
                 <source media="(min-width: 38rem)" srcset="images/hero-image.webp">
                 <img src="images/hero-image-320.webp" alt="Hero Image for Chamber Of Commerce Bulacan City" width="360" height="550">
@@ -50,7 +50,7 @@
             <div class="hero-content">
                 <strong><a href="join.html" class="cta-button">JOIN NOW</a></strong>
             </div>
-        </section>    
+        </div>    
         <div id="home-container">
             <h1>Home</h1>
             <div id="weather-section">
@@ -66,9 +66,9 @@
                 <section id="current-weather">
                     <h2>Current Weather</h2>
                     <div id="current-weather-description">
-                        <img src="" alt="" id="img-weather">
+                        <img src="company-logo.webp" alt="Weather Icon" id="img-weather">
                         <div id="current-weather-details">
-                            <strong><p id="temp"></p></strong>
+                            <p id="temp"><strong></strong></p>
                             <p id="weather"></p>
                             <p id="temp-high"></p>
                             <p id="temp-low"></p>
@@ -89,7 +89,7 @@
             </div>
             <!-- Top Companies -->
             <h2>Company Spotlight</h2>
-            <section class="spotlights" id="spotlights"></section>
+            <div class="spotlights" id="spotlights"></div>
         </div>
     </main>
     <footer>
