--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,1 +1,79 @@
-<p>thank you page</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Join Page of Bulacan Chamber of Commerce</title>
+    <meta name="author" content="Joseph D. Peralta">
+    <meta name="description" content="This page provides a form for prospective members to apply to the chamber of commerce.">
+    <meta property="og:title" content="Application form of Bulacan Chamber of Commerce">
+    <meta property="og:description" content="This page provides a form for prospective members to apply to the chamber of commerce.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
+    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <img src="images/company-logo.webp" alt="Logo of Bulacan of Commerce" srcset="images/company-logo.webp" width="75" height="70">
+        <span>
+            <strong>Bulacan</strong><br>
+            <span id="company-desc">Chamber of Commerce</span>
+        </span>
+        <button id="hamburger" aria-label="Menu button"></button>
+        <!-- navigation -->
+        <nav class="navigation">
+            <ul class="menu-links">
+                <li><a href="index.html" title="home">Home</a></li>
+                <li><a href="directory.html" title="directory">Directory</a></li>
+                <li class="current-menu-item"><a href="join.html" title="join">Join</a></li>
+                <li><a href="discover.html" title="discover">Discover</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="thanks-main-container">
+        <h1>Thank You!</h1>
+        <h2>Your application has been submitted successfully. <br>
+            We will review your application and contact you shortly.
+        </h2>
+    </main>
+    <footer>
+        <div class="contact-info">
+            <p><strong>Bulacan Chamber of Commerce</strong></p>
+            <p>Hiyas ng Bulacan Convention Center
+                Provincial Capitol Compound, Guinhawa
+                City of Malolos, Bulacan
+            </p>
+            <p>info@bulacanchamber.com</p>
+            <p>(044) 791-2574, (044) 794-1754</p>
+        </div>
+        <div class="social-media">
+            <a href="https://www.youtube.com/@josephperalta5999" target="_blank" rel="noopener noreferrer" aria-label="Youtube Icon">
+                <img src="images/youtube-icon.webp" alt="Youtube Icon" width="36" height="32">
+            </a>
+            <a href="https://x.com/jdperalta93" target="_blank" rel="noopener noreferrer" aria-label="Twitter Icon">
+                <img src="images/twitter-icon.webp" alt="Twitter Icon" width="36" height="32">
+            </a>
+            <a href="https://www.linkedin.com/in/jdperalta/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Icon">
+                <img src="images/linkedin-icon.webp" alt="LinkedIn Icon" width="36" height="32">
+            </a>
+        </div>
+        <div class="project-info">
+            <p>WDD231 Class Project</p>
+            <p>Joseph D. Peralta</p>
+            <p>&copy;<span id="currentyear"></span> Bulacan Chamber of Commerce</p>
+            <p id="footer-lastmodified-paragraph">Last Modification: <span id="lastModified"></span></p>
+        </div>
+    </footer>
+    <!-- JS -->
+    <script defer src="scripts/thankyou.js"></script>
+</body>
+</html>
