--- a/chamber/join.html
+++ b/chamber/join.html
@@ -99,66 +99,9 @@
                 </div>
             </section>
         </div>
-        <!-- Modal Non-Profit -->
-        <dialog id="dialogBoxNP">
-            <h3>Non-Profit Membership Level: Benefits</h3>
-            <p>Join our community and make a difference!</p>
-            <ul>
-                <li>Basic (FREE)</li>
-                <li>Support our mission</li>
-                <li>Access to basic member events</li>
-                <li>Basic website listing</li>
-            </ul>
-            <br>
-            <button id="closeDialogNP" aria-label="Close dialog">Close</button>
-        </dialog>
-        <!-- Modal Bronze -->
-        <dialog id="dialogBoxBronze">
-            <h3>Bronze Membership Level: Benefits</h3>
-            <p>Join our community and make a difference!</p>
-            <ul>
-                <li>Bronze (PHP 2,500)</li>
-                <li>All Basic benefits</li>
-                <li>Access to basic member events</li>
-                <li>Basic website listing</li>
-                <li>Discounts on events</li>
-            </ul>
-            <br>
-            <button id="closeDialogBronze" aria-label="Close dialog">Close</button>
-        </dialog>
-        <!-- Modal Silver -->
-        <dialog id="dialogBoxSilver">
-            <h3>Silver Membership Level: Benefits</h3>
-            <p>Join our community and make a difference!</p>
-            <ul>
-                <li>Silver (PHP 5,000)</li>
-                <li>All Basic benefits</li>
-                <li>Access to basic member events</li>
-                <li>Basic website listing</li>
-                <li>Discounts on events</li>
-                <li>Access to member directory</li>
-                <li>Access to member-only events</li>
-            </ul>
-            <br>
-            <button id="closeDialogSilver" aria-label="Close dialog">Close</button>
-        </dialog>
-        <!-- Modal Gold -->
-        <dialog id="dialogBoxGold">
-            <h3>Gold Membership Level: Benefits</h3>
-            <p>Join our community and make a difference!</p>
-            <ul>
-                <li>Gold (PHP 10,000)</li>
-                <li>All Basic benefits</li>
-                <li>Access to basic member events</li>
-                <li>Basic website listing</li>
-                <li>Discounts on events</li>
-                <li>Access to member directory</li>
-                <li>Access to member-only events</li>
-                <li>Priority listing on website</li>
-                <li>Priority listing in directory</li>
-            </ul>
-            <br>
-            <button id="closeDialogGold" aria-label="Close dialog">Close</button>
+        <!-- Reusable Modal -->
+        <dialog id="dialogBox">
+            <span id="dialog-content"></span>
         </dialog>
     </main>
     <footer>
