--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -11,6 +11,9 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
+    <!-- Cache control meta tags -->
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
+    <meta http-equiv="Expires" content="31536000" />
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
